tests/baselines/reference/nodeModulesNoDirectoryModule.errors.txt
/index.ts(2,8): error TS2307: Cannot find module 'i-have-a-dir-and-main/dist/dir' or its corresponding type declarations.


==== /node_modules/i-have-a-dir-and-main/package.json (0 errors) ====
    {
      "name": "i-have-a-dir-and-main",
      "version": "1.0.0",
      "type": "module",
      "main": "dist/index.js"
    }
    
==== /node_modules/i-have-a-dir-and-main/dist/index.d.ts (0 errors) ====
    export declare const a = 1;
    
==== /node_modules/i-have-a-dir-and-main/dist/dir/index.d.ts (0 errors) ====
    export declare const b = 2;
    
==== /package.json (0 errors) ====
    { "type": "module" }
    
==== /index.ts (1 errors) ====
    import 'i-have-a-dir-and-main' // ok
    import 'i-have-a-dir-and-main/dist/dir' // error
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'i-have-a-dir-and-main/dist/dir' or its corresponding type declarations.
    